--- a/public/index.html
+++ b/public/index.html
@@ -62,8 +62,8 @@ function openSurfLocation(evt) {
             new sap.m.IconTabBar({
                 items: [
                     new sap.m.IconTabFilter({
-                        text: 'Tab 1',
-                        icon: 'sap-icon://product',
+                        text: 'Spot Info',
+                        icon: 'sap-icon://tag-cloud-chart',
                         content: [
                             new sap.m.Image({
                                 src: "/img/15_1Laird_Hamilton_.jpg"
@@ -71,16 +71,16 @@ function openSurfLocation(evt) {
                         ]
                     }),
                     new sap.m.IconTabFilter({
-                        text: 'Tab 2',
-                        icon: 'sap-icon://product'
+                        text: 'Swell View',
+                        icon: 'sap-icon://picture'
                     }),
                     new sap.m.IconTabFilter({
-                        text: 'Tab 3',
-                        icon: 'sap-icon://product'
+                        text: 'Social Feed',
+                        icon: 'sap-icon://feed'
                     }),
                     new sap.m.IconTabFilter({
-                        text: 'Tab 4',
-                        icon: 'sap-icon://product'
+                        text: 'Another Test',
+                        icon: 'sap-icon://favorite'
                     })
                 ]
             })
