--- a/public/index.html
+++ b/public/index.html
@@ -132,7 +132,7 @@ function openSurfLocation(evt) {
         <div id="nearest" />
 
         <p id="earth">
-            <span id="show-menu" class="text-button" title="menu">earth</span>
+            <span id="show-menu" class="text-button" title="menu">Weather</span>
             <span id="progress" class="invisible"></span>
         </p>
 
