Added current condition

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 
     <link rel="alternate" hreflang="x-default" href="http://earth.nullschool.net/" />
     <link rel="alternate" hreflang="ja" href="http://earth.nullschool.net/jp/" />
-    <script id="sap-ui-bootstrap" src="https://sapui5.ap1.hana.ondemand.com/resources/sap-ui-cachebuster/sap-ui-core.js" data-sap-ui-libs="sap.m" data-sap-ui-theme="sap_bluecrystal" data-sap-ui-xx-bindingSyntax="complex">
+    <script id="sap-ui-bootstrap" src="https://sapui5.ap1.hana.ondemand.com/resources/sap-ui-cachebuster/sap-ui-core.js" data-sap-ui-libs="sap.m,sap.ui.layout" data-sap-ui-theme="sap_bluecrystal" data-sap-ui-xx-bindingSyntax="complex">
     </script>
     <script type="text/javascript" src="scripts/demojam14.js"></script>
 
